@@ -1,4 +1,4 @@
 #!/bin/sh
 
-make $* 2>&1 | tee build.log
+DEBUG=1 DEBUGFS=1 make $* 2>&1 | tee build.log
 cp ./build.log logs/build-`date +%Y-%m-%d-%H-%M-%S`.log
