@@ -1,5 +1,0 @@
-DIR := user/config/
-SOURCES := config.c
-
-TEMP := $(addprefix $(DIR), $(SOURCES))
-C_SRC += $(TEMP)
